--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,9 +105,7 @@ gtag('config', '{{site.ganalytics}}');
   <!-- CREDITS BEGIN.-->
   <!-- If you want to support my work, please donate to remove the credits. This helps me keep it up and running: https://www.wowthemes.net/donate/ -->
   <div class="credits mx-auto text-center mb-3">
-    <a class="hover-opacity font-weight-bold" href="https://bootstrapstarter.com/template-affiliates-bootstrap-jekyll/">
-      <img src="{{site.baseurl}}/assets/images/credits.png" alt="powered by WowThemes">
-    </a>
+    <a class="hover-opacity font-weight-bold" href="https://bootstrapstarter.com/template-affiliates-bootstrap-jekyll/">WowThemes</a>
   </div>
   <!-- CREDITS END -->
 
@@ -119,7 +117,8 @@ gtag('config', '{{site.ganalytics}}');
     {% endfor %}
     </ul>
     <div class="copyright small">
-       Copyright © {{site.title}}. All rights reserved.
+       Copyright © {{site.title}}. All rights reserved. <img  src="//sstatic1.histats.com/0.gif?4896455&101" alt="" border="0">
+
     </div>
 </footer>
 
